@@ -2145,11 +2145,13 @@ class suffix_scan
   const suffix_info *suffixes, *suffixes_start;
   int nextstate;
   char *eopath;
+  size_t namelen;
 public:
   const char *path;
   char *has (const char *, const suffix_info *);
   int next ();
   int lnk_match () {return nextstate >= SCAN_APPENDLNK;}
+  size_t name_len () {return namelen;}
 };
 
 char *
@@ -2190,8 +2192,15 @@ suffix_scan::has (const char *in_path, const suffix_info *in_suffixes)
   ext_here = eopath;
 
  done:
-  /* Avoid attaching suffixes if the resulting filename would be invalid. */
-  if (eopath - fname > NAME_MAX - 4)
+  namelen = eopath - fname;
+  /* Avoid attaching suffixes if the resulting filename would be invalid.
+     For performance reasons we don't check the length of a suffix, since
+     we know that all suffixes are 4 chars in length.
+     
+     FIXME: This is not really correct.  A fully functional test should
+            work on wide character paths.  This would probably also speed
+	    up symlink_info::check. */
+  if (namelen > NAME_MAX - 4)
     {
       nextstate = SCAN_JUSTCHECKTHIS;
       suffixes = NULL;
@@ -2232,8 +2241,13 @@ suffix_scan::next ()
 	    return 1;
 	  case SCAN_LNK:
 	  case SCAN_APPENDLNK:
-	    strcat (eopath, ".lnk");
 	    nextstate = SCAN_DONE;
+	    if (namelen + (*eopath ? 8 : 4) > NAME_MAX)
+	      {
+		*eopath = '\0';
+		return 0;
+	      }
+	    strcat (eopath, ".lnk");
 	    return 1;
 	  default:
 	    *eopath = '\0';
@@ -2241,7 +2255,8 @@ suffix_scan::next ()
 	  }
 
       while (suffixes && suffixes->name)
-	if (nextstate == SCAN_EXTRALNK && !suffixes->addon)
+	if (nextstate == SCAN_EXTRALNK
+	    && (!suffixes->addon || namelen > NAME_MAX - 8))
 	  suffixes++;
 	else
 	  {
@@ -2360,13 +2375,20 @@ restart:
   mode = 0;
   pflags &= ~(PATH_SYMLINK | PATH_LNK | PATH_REP);
 
-  ext_here = suffix.has (path, suffixes);
-  extn = ext_here - path;
-
   PVOID eabuf = &nfs_aol_ffei;
   ULONG easize = sizeof nfs_aol_ffei;
 
+  ext_here = suffix.has (path, suffixes);
+  extn = ext_here - path;
   bool had_ext = !!*ext_here;
+
+  /* If the filename is too long, don't even try. */
+  if (suffix.name_len () > NAME_MAX)
+    {
+      set_error (ENAMETOOLONG);
+      goto file_not_symlink;
+    }
+
   while (suffix.next ())
     {
       error = 0;
